# bookMaker

./: .clineignore  .clinerules  .editorconfig  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .rga-config.json  AGENTS.md  CHANGELOG.md  CHAPTER_AUTHORING_WORKFLOW.md  CHAPTER_PRODUCTION.md  CHAPTER_SPEC.md  CLAUDE.md  CODING_PLAN.md  FAULT.md  GUI_MANIFEST.md  GUI_ROADMAP.md  KULLANIM_KILAVUZU.md  LICENSE  LLM_EXPLANATION.md  MASTER_PLAN.md  MIGRATION.md  PRODUCTION_FAULT.md  README.md  RELEASE_CHECKLIST.md  RESUME.md  SESSION.md  TODO.md  WORKSPACE.md  _diagnosis.json  _remaining_errors.json  book.ps1  book_project_dir.md  dnm.py  justfile  llm_config.example.json  notes.txt  ogrenciler.csv  opencode.json  (+8 more)
.claude/: settings.json  settings.local.json  statusline-command.sh
.devcontainer/: Dockerfile
__.devcontainer/: devcontainer.json
docs/: README.md  bookMaker_guncel_repo_inceleme_raporu.md  chapter_authoring_workflow.md  chapter_spec.md  coding_plan.md  fault.md  gui_manifest.md  index.html  master_plan.md  production_fault.md
promptlar/: 03_cikti_format_standardi_v1_3.md  05_bolum_yapisi_standardi_v1_3.md  06_bolum_girdi_sablonu_v1_3.md  09_otomasyon_manifest_standardi_v1_3.md  10_manuel_gorsel_onceligi_politikasi_v1_3.md  12_outline_kontrol_promptu_java_temelleri_v1_3.md
prompts/: 00_kullanim_kilavuzu_v1_3.md  01_nihai_icindekiler_v1_3.md  02_ana_sistem_promptu_java_temelleri_v1_3.md  03_cikti_format_standardi_v1_3.md  04_kaynaklar_java_temelleri_v1_3.md  05_bolum_yapisi_standardi_v1_3.md  06_bolum_girdi_sablonu_v1_3.md  (+8 more)
(+670 files in other folders)
