[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookmaker"
version = "0.1.0"
description = "Akademik ve teknik kitap üretim stüdyosu"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "ruamel.yaml>=0.18",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "requests>=2.33.1",
    "playwright>=1.59.0",
]

[project.scripts]
bookmaker = "bookmaker.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bookmaker"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "httpx>=0.27",
    "pytest-playwright>=0.7.2",
    "pytest-xdist>=3.8.0",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: marks tests as slow (e.g., mmdc Mermaid render, ~20s)"]
tmp_path_retention_count = 3
tmp_path_retention_policy = "failed"

[tool.uv]
link-mode = "copy"
